--- a/css/global.css
+++ b/css/global.css
@@ -80,7 +80,7 @@ button {
  .menu {
     width: fit-content;
     position: fixed;
-    top:30%;
+    top:10%;
     right:20%;
     display: flex;
     flex-direction: column;
@@ -104,6 +104,11 @@ button {
     display: flex;
     justify-content: center;
     /* background-color: black; */
+}
+
+.space {
+    width: 225px;
+    height: 40px;
 }
 
 .clavardage {
