Ajout de creation d'une partie + Ajout du Board & ajax-state

--- a/css/global.css
+++ b/css/global.css
@@ -118,3 +118,9 @@ button {
     right:0;
     background-color: black;
 }
+
+/* *************************************************************************
+ Board .PHP
+ **************************************************************************/
+
+ 
