--- a/css/global.css
+++ b/css/global.css
@@ -88,15 +88,16 @@ button { /* Tous les buttons*/
 }
 
 .button-banner {
-    width: 225px;
-    height: 40px;
+    min-width: 225px;
+    min-height: 40px;
     align-self: center;
+    background: no-repeat center;
     background-size: 100%;
-    background-repeat: no-repeat;
     background-image: url(../images/Background/Button_UI.png);
 }
 
 .button-text {
+    margin: 0.5vh;
     font-size: 4vh;
     text-decoration: none;
     color: rgb(30, 111, 30);
@@ -143,7 +144,11 @@ button { /* Tous les buttons*/
     position: absolute;
     left: 10%;
     top: 50%;
+    text-align: center;
+    font-size: large;
+    font-family:Georgia, 'Times New Roman', Times, serif;
     background-color: chocolate;
+    border: 3px black solid;
     display: none;
 }
 
@@ -274,6 +279,7 @@ button { /* Tous les buttons*/
     font-size: 3vh;
     min-width:20vh;
     min-height:4vh;
+    color: white;
     /*background-color: rgb(30,30,75);*/
 }
 
@@ -568,6 +574,9 @@ Player //Board.php
     min-width: 100%;
     width: 100px;
     min-height: 25%;
+    color : white;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.42);
     font-size: 2vh;
     word-wrap: normal;
 }
